Fix minor layout issues

--- a/src/assets/teammanagement.less
+++ b/src/assets/teammanagement.less
@@ -420,6 +420,9 @@
             .cell {
               &.playerdetails {
                 width: 115px;
+                .playername {
+                  width: 105px;
+                }
               }
               &.skills {
                 width: 115px;
@@ -521,10 +524,6 @@
         color: @White;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
-
-        .statma, .statst, .statag, .statpa, .statav {
-          padding-left: 8px;
-        }
       }
       .playerrow {
         background-color: @OldLace;
